--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
 <input type="text" id="gsearchbar" onkeyup="var a=document.querySelectorAll('#glist a[href]');for(var i=0;i<a.length;i++)a[i].style.display=a[i].textContent.toUpperCase().indexOf(this.value.toUpperCase())!=-1?'block':'none'" autocomplete="off" spellcheck="false" placeholder="Search" />
 <div id="glist">
   <h2>Videos</h2>
-  <a href="./gfiles/html5/videos"></a>
+  <a href="./gfiles/html5/videos">videos</a>
 <h2>HTML5 Games</h2>
 <a href="./gfiles/html5/2048/">2048</a>
 <a href="./gfiles/html5/asteroids/">Asteroids</a>
