--- a/list.html
+++ b/list.html
@@ -24,7 +24,7 @@
 <a href="./gfiles/html5/evilglitch/">Evilglitch</a>
 <a href="./gfiles/html5/factoryballsforever/">Factoryballsforever</a>
 <a href="./gfiles/html5/flappybird/">Flappybird</a>
-<a href="./gfiles/html5/geometrydash/">Geometrydash</a>
+<a href="./gfiles/html5/geometrydash.html">Geometrydash</a>
 <a href="./gfiles/html5/hextris/">Hextris</a>
 <a href="./gfiles/html5/konnekt/">Konnekt</a>
 <a href="./gfiles/html5/krunker/">Krunker</a>
