--- a/list.html
+++ b/list.html
@@ -11,6 +11,7 @@
 <div id="glist">
 <h2>HTML5 Games</h2>
   <a href=https://www.dropbox.com/s/vkxwad6chn4l0e7/FortniteZ.html?dl=0>Fortnite Z</a>
+  <a href=./gfiles/html5/Appelv1></a>
 <a href="./gfiles/html5/2048/">2048</a>
 <a href="./gfiles/html5/asteroids/">Asteroids</a>
 <a href="./gfiles/html5/astray/">Astray</a>
