--- a/list.html
+++ b/list.html
@@ -274,7 +274,7 @@
 </div>
 </div>
 </div>
-  <h3 #watermark>Made by Whitson Jenkins</h3>
-  <p #watermark>Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
+  <h3 style="align-content: center;>Made by Whitson Jenkins</h3>
+  <p style="align-content: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
 </body>
 </html>
