--- a/list.html
+++ b/list.html
@@ -274,7 +274,7 @@
 </div>
 </div>
 </div>
-  <h3>Made by Whitson Jenkins</h3>
-  <p>Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
+  <h3 style="text-align: center;">Made by Whitson Jenkins</h3>
+  <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
 </body>
 </html>
