--- a/list.html
+++ b/list.html
@@ -276,5 +276,6 @@
 </div>
   <h3 style="text-align: center;">Made by Whitson Jenkins</h3>
   <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
+  <p><a href=https://daserver.vercel.app>Join our minecraft server!</a></p>
 </body>
 </html>
