--- a/list.html
+++ b/list.html
@@ -2,12 +2,38 @@
 <html>
 <head>
   <style>
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+</style>
+  <style>
     h1 {text-align: center;}
   </style>
 <title>Lexia</title>
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <div class="dropdown">
+  <span>Mouse over me</span>
+  <div class="dropdown-content">
+    <p>Hello World!</p>
+  </div>
+</div>
   <h1 style="text-shadow: 5px 5px 5px red;">Lexia Games</h1>
 <div class="container">
 <div class="box">
