--- a/list.html
+++ b/list.html
@@ -10,9 +10,9 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: black;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px red;
   padding: 12px 16px;
   z-index: 1;
 }
