--- a/list.html
+++ b/list.html
@@ -29,9 +29,10 @@
 </head>
 <body>
   <div class="dropdown">
-  <span>Mouse over me</span>
+  <span>Url Disguise</span>
   <div class="dropdown-content">
-    <p>Hello World!</p>
+    <p><a href=https://mobymax.vercel.app>Mobymax</a></p>
+    <p><a href=https://getepic.vercel.app>GetEpic</a></p>
   </div>
 </div>
   <h1 style="text-shadow: 5px 5px 5px red;">Lexia Games</h1>
