--- a/list.html
+++ b/list.html
@@ -24,7 +24,7 @@
   <style>
     h1 {text-align: center;}
   </style>
-<title>Lexia</title>
+<title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -33,6 +33,7 @@
   <div class="dropdown-content">
     <p><a href=https://mobymax.vercel.app>Mobymax</a></p>
     <p><a href=https://getepic.vercel.app>GetEpic</a></p>
+    <p><a href=https://lexia.vercel.app>Lexia</a></p>
   </div>
 </div>
   <h1 style="text-shadow: 5px 5px 5px red;">Lexia Games</h1>
