--- a/list.html
+++ b/list.html
@@ -306,7 +306,7 @@
   <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
   <p style="text-align: center;"><a href=cl.html>Change Log</a></p>
   <p style="text-align: center;"><a href=https://daserver.vercel.app>Join our minecraft server!</a></p>
-  <a onclick="window.open(document.https://mobymax.vercel.app, '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
+  <a onclick="window.open(https://mobymax.vercel.app, '_blank', 'location=yes,height=570,width=520,scrollbars=yes,status=yes');">
 Open New Window test
 </a>
 </body>
