--- a/list.html
+++ b/list.html
@@ -28,6 +28,12 @@
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <ul>
+  <li><a href="default.asp">Home</a></li>
+  <li><a href="news.asp">News</a></li>
+  <li><a href="contact.asp">Contact</a></li>
+  <li><a href="about.asp">About</a></li>
+</ul>
   <div class="dropdown">
   <span>Url Disguise</span>
   <div class="dropdown-content">
