--- a/list.html
+++ b/list.html
@@ -304,7 +304,7 @@
 </div>
   <h3 style="text-align: center;">Made by Whitson Jenkins</h3>
   <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
-  <p><a href=https://github.com/Herobrine5261/games2>Github</a></p>
+  <p style="text-align: center;"><a href=https://github.com/Herobrine5261/games2>Github</a></p>
   <p style="text-align: center;"><a href=cl.html>Change Log</a></p>
   <p style="text-align: center;"><a href=https://daserver.vercel.app>Join our minecraft server!</a></p>
 </body>
