--- a/list.html
+++ b/list.html
@@ -302,6 +302,7 @@
 </div>
 </div>
 </div>
+  <h3 style="text-align: center;"><a href=https://forms.gle/boxMvDTaFdXVeXrR8>Suggest a game!</a></h3>
   <h3 style="text-align: center;">Made by Whitson Jenkins</h3>
   <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
   <p style="text-align: center;"><a href=https://github.com/Herobrine5261/games2>Github</a></p>
