--- a/list.html
+++ b/list.html
@@ -12,7 +12,7 @@
   position: absolute;
   background-color: black;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px red;
+  box-shadow: 0px 8px 16px 0px black;
   padding: 12px 16px;
   z-index: 1;
 }
