--- a/list.html
+++ b/list.html
@@ -10,11 +10,12 @@
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: black;
+  background-color: blue;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px black;
   padding: 12px 16px;
   z-index: 1;
+  border-radius: 25px;
 }
 
 .dropdown:hover .dropdown-content {
