--- a/list.html
+++ b/list.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <div class="dropdown">
-  <span>Url Disguise</span>
+  <span style="text-shadow: 5px 5px 5px black">Url Disguise</span>
   <div class="dropdown-content">
     <p><a href=https://mobymax.vercel.app>Mobymax</a></p>
     <p><a href=https://getepic.vercel.app>GetEpic</a></p>
