--- a/list.html
+++ b/list.html
@@ -37,6 +37,7 @@
     <p><a href=https://lexia.vercel.app>Lexia</a></p>
   </div>
 </div>
+  <h2 style="text-align: center;"><a href=https://daserver.vercel.app>Join our minecraft server!</a></h2>
   <h1 style="text-shadow: 5px 5px 5px red;">Lexia Games</h1>
 <div class="container">
 <div class="box">
@@ -308,6 +309,5 @@
   <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
   <p style="text-align: center;"><a href=https://github.com/Herobrine5261/games2>Github</a></p>
   <p style="text-align: center;"><a href=cl.html>Change Log</a></p>
-  <p style="text-align: center;"><a href=https://daserver.vercel.app>Join our minecraft server!</a></p>
 </body>
 </html>
