--- a/list.html
+++ b/list.html
@@ -38,6 +38,7 @@
   </div>
 </div>
   <h2 style="text-align: center;"><a href=https://daserver.vercel.app>Join our minecraft server!</a></h2>
+  <h2 style="text-align: center;"><a href=https://padlet.com/whitsonjenkins/qgdya8pxfm3mg32u>Join our chat box for updates!</a></h2>
   <h1 style="text-shadow: 5px 5px 5px red;">Lexia Games</h1>
 <div class="container">
 <div class="box">
