--- a/list.html
+++ b/list.html
@@ -35,7 +35,7 @@
     <p><a href=https://mobymax.vercel.app>Mobymax</a></p>
     <p><a href=https://getepic.vercel.app>GetEpic</a></p>
     <p><a href=https://lexia.vercel.app>Lexia</a></p>
-    <p><a href=https://hsv-k12-schoology>Schoology</a></p>
+    <p><a href=https://hsv-k12-schoology.vercel.app>Schoology</a></p>
   </div>
 </div>
   <h2 style="text-align: center;"><a href=https://daserver.vercel.app>Join our minecraft server!</a></h2>
