--- a/gfiles/html5/cod.html
+++ b/gfiles/html5/cod.html
@@ -1,3 +1,3 @@
 <video width="320" height="240" controls>
-  <source src="./gfiles/html5/videoplayback.mp4" type="video/mp4">
+  <source src="https://lexia.vercel.app/gfiles/html5/videoplayback.mp4" type="video/mp4">
 </video>
