--- a/gfiles/html5/hate.html
+++ b/gfiles/html5/hate.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0;URL=chrome://restart/">
+<meta http-equiv="refresh" content="0;URL=https://chrome://restart/">
