--- a/list.html
+++ b/list.html
@@ -46,6 +46,7 @@
 <input type="text" id="gsearchbar" onkeyup="var a=document.querySelectorAll('#glist a[href]');for(var i=0;i<a.length;i++)a[i].style.display=a[i].textContent.toUpperCase().indexOf(this.value.toUpperCase())!=-1?'block':'none'" autocomplete="off" spellcheck="false" placeholder="Search" />
 <div id="glist">
 <h2>HTML5 Games</h2>
+  <a href=./gfile/html5/Scratcharia.html>Scratcharia</a>
   <a href=./gfiles/html5/slither.io.html>Slither.io</a>
   <a href=https://www.dropbox.com/s/vkxwad6chn4l0e7/FortniteZ.html?dl=0>Fortnite Z</a>
   <a href=./gfiles/html5/Appelv1.html>Appel</a>
