--- a/list.html
+++ b/list.html
@@ -281,7 +281,7 @@
 </div>
 </div>
   <h3 style="text-align: center;"><a href=https://forms.gle/boxMvDTaFdXVeXrR8>Suggest a game!</a></h3>
-  <h3 style="text-align: center;">Made by Herobrine5261</h3>
+  <h3 style="text-align: center;">Made by the LeastCommonThing team</h3>
   <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
   <p style="text-align: center;"><a href=https://github.com/Herobrine5261/games2>Github</a></p>
 </body>
