--- a/list.html
+++ b/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Google Adsence --!>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
      crossorigin="anonymous"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -36,6 +37,7 @@
 <input type="text" id="gsearchbar" onkeyup="var a=document.querySelectorAll('#glist a[href]');for(var i=0;i<a.length;i++)a[i].style.display=a[i].textContent.toUpperCase().indexOf(this.value.toUpperCase())!=-1?'block':'none'" autocomplete="off" spellcheck="false" placeholder="Search" />
 <div id="glist">
 <h2>HTML5 Games</h2>
+  <a href=./gfiles/html5/magicwheel.html>Magic Wheel</a>
   <a href=https://www.dropbox.com/s/692wpcev8fgvdqc/Scratcharia.html?dl=1>Scratcharia</a>
   <a href=https://www.dropbox.com/s/c7joijx4quwx7sm/slither.io.html?dl=1>Slither.io</a>
   <a href=https://www.dropbox.com/s/vkxwad6chn4l0e7/FortniteZ.html?dl=1>Fortnite Z</a>
