--- a/list.html
+++ b/list.html
@@ -30,7 +30,7 @@
 </div>
   <h2 style="text-align: center;"><a href=https://daserver.vercel.app>Join our game servers!</a></h2>
   <h2 style="text-align: center;"><a href=https://padlet.com/whitsonjenkins/qgdya8pxfm3mg32u>Join our chat box for updates!</a></h2>
-  <h1 style="text-shadow: 5px 5px 5px red;">Lexia Games</h1>
+  <h1 style="text-shadow: 5px 5px 5px black;">Least Common Games</h1>
 <div class="container">
 <div class="box">
 <input type="text" id="gsearchbar" onkeyup="var a=document.querySelectorAll('#glist a[href]');for(var i=0;i<a.length;i++)a[i].style.display=a[i].textContent.toUpperCase().indexOf(this.value.toUpperCase())!=-1?'block':'none'" autocomplete="off" spellcheck="false" placeholder="Search" />
