--- a/list.html
+++ b/list.html
@@ -27,9 +27,8 @@
     <p><a href=https://hsv-k12-schoology.vercel.app>Schoology</a></p>
   </div>
 </div>
-  <h2 style="text-align: center;>Top Patreons</h2>
+  <h2 style="text-align: center;">Top Patreons</h2>
   <p style="text-align: center;>None :(</p>
-  <h2 style="text-align: center;"><a href=https://daserver.vercel.app>Join our game servers!</a></h2>
   <h2 style="text-align: center;"><a href=https://padlet.com/whitsonjenkins/qgdya8pxfm3mg32u>Join our chat box for updates!</a></h2>
   <h1 style="text-shadow: 5px 5px 5px black;">Least Common Games</h1>
 <div class="container">
