--- a/list.html
+++ b/list.html
@@ -14,13 +14,21 @@
   <style>
     h1 {text-align: center;}
   </style>
+  ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 <title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <ul>
+    <li><a href=https://google.com>Test</a></li>
+  </ul>
   <h2 style="text-align: center;"><a href=https://padlet.com/whitsonjenkins/qgdya8pxfm3mg32u>Join our chat box for updates!</a></h2>
   <h1 style="text-shadow: 5px 5px 5px black;">Least Common Games</h1>
-  <div>Hello World</div>
+  
   <h3 style="text-align: center;"><a href=https://github.com/Herobrine5261/games2/issues>Suggest a game and report issues!</a></h3>
   <h3 style="text-align: center;">Made by the LeastCommonThing team</h3>
   <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
