--- a/list.html
+++ b/list.html
@@ -14,11 +14,13 @@
   <style>
     h1 {text-align: center;}
   </style>
+  <style>
   ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
+  </style>
 <title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
 </head>
