--- a/list.html
+++ b/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
      crossorigin="anonymous"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D8TLVN659Z"></script>
@@ -18,15 +19,32 @@
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <ul>
-    <li><a href=https://google.com>Test</a></li>
-  </ul>
-  <h2 style="text-align: center;"><a href=https://padlet.com/whitsonjenkins/qgdya8pxfm3mg32u>Join our chat box for updates!</a></h2>
-  <h1 style="text-shadow: 5px 5px 5px black;">Least Common Games</h1>
-  
-  <h3 style="text-align: center;"><a href=https://github.com/Herobrine5261/games2/issues>Suggest a game and report issues!</a></h3>
-  <h3 style="text-align: center;">Made by the LeastCommonThing team</h3>
-  <p style="text-align: center;">Support me on <a href=https://www.patreon.com/lctgames>Patreon!</a></p>
-  <p style="text-align: center;"><a href=https://github.com/Herobrine5261/games2>Github</a></p>
+<div class="w3-sidebar w3-bar-block w3-collapse w3-card" style="width:200px;" id="mySidebar">
+  <button class="w3-bar-item w3-button w3-hide-large"
+  onclick="w3_close()">Close &times;</button>
+  <a href="#" class="w3-bar-item w3-button">Link 1</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
+
+<div class="w3-main" style="margin-left:200px">
+
+<div class="w3-teal">
+  <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+  <div class="w3-container">
+    <h1>My Page</h1>
+  </div>
+  </div>
+</div>
+
+<script>
+function w3_open() {
+  document.getElementById("mySidebar").style.display = "block";
+}
+
+function w3_close() {
+  document.getElementById("mySidebar").style.display = "none";
+}
+</script>
 </body>
 </html>
