--- a/list.html
+++ b/list.html
@@ -15,18 +15,15 @@
 <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<div class="w3-sidebar w3-bar-block w3-collapse w3-card" style="width:200px;" id="mySidebar">
+<div class="w3-sidebar w3-bar-block" style="width:25%">
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
 </div>
 
-<div class="w3-main" style="margin-left:200px">
-
-<div class="w3-teal">
-  <button class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-  <div class="w3-container">
-    <h1>My Page</h1>
+<div style="margin-left:25%">
+... page content ...
+</div>
   </div>
   </div>
 </div>
