--- a/list.html
+++ b/list.html
@@ -13,12 +13,14 @@
   gtag('config', 'G-D8TLVN659Z');
 <title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
-</head>
-<body>
-<div class="w3-sidebar w3-bar-block" style="width:25%">
+  <div class="w3-bar w3-black">
+  <a href="#" class="w3-bar-item w3-button">Home</a>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
 </div>
+</head>
+<body>
+
 </body>
 </html>
