--- a/list.html
+++ b/list.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
      crossorigin="anonymous"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-D8TLVN659Z"></script>
 <script>
@@ -11,8 +10,10 @@
   gtag('js', new Date());
   
   gtag('config', 'G-D8TLVN659Z');
+  </script>
 <title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
 <div class="w3-bar w3-black">
