--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<title>Games</title>
+<div class="w3-bar w3-black">
+  <a href="./list.html" class="w3-bar-item w3-button">Home</a>
+  <a href="./gfiles" class="w3-bar-item w3-button">Games</a>
+  <a href="#" class="w3-bar-item w3-button">Support</a>
+  <a href="#" class="w3-bar-item w3-button">Credits</a>
+</div>
+</head>
+<body>
 
+</body>
+</html>
