--- a/list.html
+++ b/list.html
@@ -14,7 +14,12 @@
 <title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<embed width="100%" height="25px" src="./nav/nav.html">
+<div class="w3-bar w3-black">
+  <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
+  <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Games</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
 </head>
 <body>
 
