--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=shortstack">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.w3-shortstack {
+  font-family: 'shortstack', serif;
+}
+</style>
 <title>Games</title>
+<div class="w3-bar w3-black">
+  <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
+  <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Games</a>
+  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
 </head>
 <body>
-
+  <h1 class="w3-shortstack">HTML5 Games</h1>
 </body>
 </html>
