--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=shortstack">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-.w3-shortstack {
-  font-family: 'shortstack', serif;
-}
-</style>
 <title>Games</title>
 <div class="w3-bar w3-black">
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
@@ -17,6 +11,7 @@
 </div>
 </head>
 <body>
-  <h1 class="w3-shortstack">HTML5 Games</h1>
+  <h1>HTML5 Games</h1>
+  <a href="https://lexia.vercel.app/gfiles/html5/minecraft" class="w3-button w3-white w3-border w3-border-red w3-round-large">Minecraft</a>
 </body>
 </html>
