--- a/list.html
+++ b/list.html
@@ -22,6 +22,7 @@
 </div>
 </head>
 <body>
-
+     <h1>Least Common Games</h1>
+     <h2>Click on the Games button at the top.</h2>
 </body>
 </html>
