--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -14,5 +14,6 @@
   <h1>HTML5 Games</h1>
   <a href="https://lexia.vercel.app/gfiles/html5/minecraft" class="w3-button w3-white w3-border w3-border-red w3-round-large">Minecraft</a>
   <a href="https://lexia.vercel.app/gfiles/html5/cookieclicker/index.html" class="w3-button w3-white w3-border w3-border-red w3-round-large">Cookie Clicker</a>
+  <a href="https://lexia.vercel.app/gfiles/html5/geometrydash.html" class="w3-button w3-white w3-border w3-border-red w3-round-large">Geometry Dash</a>
 </body>
 </html>
