--- a/list.html
+++ b/list.html
@@ -22,7 +22,7 @@
 </div>
 </head>
 <body>
-     <h1>Least Common Games</h1>
-     <h2>Click on the Games button at the top.</h2>
+     <h1 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Least Common Games</h1>
+     <h2 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Click on the Games button at the top.</h2>
 </body>
 </html>
