--- a/list.html
+++ b/list.html
@@ -25,4 +25,10 @@
      <h1 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Least Common Games</h1>
      <h2 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Click on the Games button at the top.</h2>
 </body>
+<footer>
+<div class="w3-bar w3-black">
+  <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Credits</a>
+  <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Support</a>
+</div>   
+</footer>
 </html>
