--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -15,5 +15,9 @@
   <a href="https://lexia.vercel.app/gfiles/html5/minecraft" class="w3-button w3-white w3-border w3-border-red w3-round-large">Minecraft</a>
   <a href="https://lexia.vercel.app/gfiles/html5/cookieclicker/index.html" class="w3-button w3-white w3-border w3-border-red w3-round-large">Cookie Clicker</a>
   <a href="https://lexia.vercel.app/gfiles/html5/geometrydash.html" class="w3-button w3-white w3-border w3-border-red w3-round-large">Geometry Dash</a>
+  <a href="https://lexia.vercel.app/gfiles/html5/Appelv1.html" class="w3-button w3-white w3-border w3-border-red w3-round-large">Appel</a>
+  <a href="https://lexia.vercel.app/gfiles/html5/magicwheel.html" class="w3-button w3-white w3-border w3-border-red w3-round-large">Magic Wheel</a>
+  <h1>Flash Games</h1>
+  <a href="https://lexia.vercel.app/gfiles/?swf=mariocombat.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Mario Combat</a>
 </body>
 </html>
