--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -18,6 +18,6 @@
   <a href="https://lexia.vercel.app/gfiles/html5/Appelv1.html" class="w3-button w3-white w3-border w3-border-red w3-round-large">Appel</a>
   <a href="https://lexia.vercel.app/gfiles/html5/magicwheel.html" class="w3-button w3-white w3-border w3-border-red w3-round-large">Magic Wheel</a>
   <h1>Flash Games</h1>
-  <a href="https://lexia.vercel.app/gfiles/?swf=mariocombat.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Mario Combat</a>
+  <a href="https://lexia.vercel.app/gfiles/flash/?swf=mariocombat.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Mario Combat</a>
 </body>
 </html>
