--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -20,5 +20,6 @@
   <h1>Flash Games</h1>
   <a href="https://lexia.vercel.app/gfiles/flash/?swf=mariocombat.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Mario Combat</a>
   <a href="https://lexia.vercel.app/gfiles/flash/?swf=bloonstd1.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Bloonstd1</a>
+  <a href="https://lexia.vercel.app/gfiles/flash/?swf=supersmashflash.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Super Smash Flash</a>
 </body>
 </html>
