--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <h2>HTML5 Games</h2>
-<a href="">slither.io</a>
+<a href="https://www.dropbox.com/s/c7joijx4quwx7sm/slither.io.html?dl=1">slither.io</a>
 <a href="./gfiles/html5/2048/">2048</a>
 <a href="./gfiles/html5/asteroids/">Asteroids</a>
 <a href="./gfiles/html5/astray/">Astray</a>
@@ -27,7 +27,7 @@
 <a href="./gfiles/html5/evilglitch/">Evilglitch</a>
 <a href="./gfiles/html5/factoryballsforever/">Factoryballsforever</a>
 <a href="./gfiles/html5/flappybird/">Flappybird</a>
-<a href="./gfiles/html5/geometrydash/">Geometrydash</a>
+<a href="./gfiles/html5/geometrydash.html">Geometrydash</a>
 <a href="./gfiles/html5/hextris/">Hextris</a>
 <a href="./gfiles/html5/konnekt/">Konnekt</a>
 <a href="./gfiles/html5/krunker/">Krunker</a>
