--- a/list.html
+++ b/list.html
@@ -17,7 +17,7 @@
 <div class="w3-bar w3-black">
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
   <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Games</a>
-  <a href="#" class="w3-bar-item w3-button">Link 2</a>
+  <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button">Report an issue</a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
 </div>
 </head>
