--- a/list.html
+++ b/list.html
@@ -11,6 +11,8 @@
   
   gtag('config', 'G-D8TLVN659Z');
   </script>
+     <script async="async" data-cfasync="false" src="//pl16815460.effectivegatetocontent.com/6a2d9f497d22bee2cacb7b1194f77011/invoke.js"></script>
+<div id="container-6a2d9f497d22bee2cacb7b1194f77011"></div>
 <title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -24,5 +26,6 @@
 <body>
      <h1 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Least Common Games</h1>
      <h2 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Click on the Games button at the top.</h2>
+     <div id="container-6a2d9f497d22bee2cacb7b1194f77011"></div>
 </body>
 </html>
