--- a/list.html
+++ b/list.html
@@ -11,7 +11,7 @@
   
   gtag('config', 'G-D8TLVN659Z');
   </script>
-     <script async="async" data-cfasync="false" src="//pl16815460.effectivegatetocontent.com/6a2d9f497d22bee2cacb7b1194f77011/invoke.js"></script>
+     <script async="async" data-cfasync="false" src="https://pl16815460.effectivegatetocontent.com/6a2d9f497d22bee2cacb7b1194f77011/invoke.js"></script>
 <title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
