--- a/list.html
+++ b/list.html
@@ -3,15 +3,13 @@
 <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
      crossorigin="anonymous"></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D8TLVN659Z"></script>
-<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
   
   gtag('config', 'G-D8TLVN659Z');
   </script>
-     <script async="async" data-cfasync="false" src="//pl16815460.effectivegatetocontent.com/6a2d9f497d22bee2cacb7b1194f77011/invoke.js"></script>
+     <script async="async" data-cfasync="false" src="https://pl16815460.effectivegatetocontent.com/6a2d9f497d22bee2cacb7b1194f77011/invoke.js"></script>
 
 <div id="container-6a2d9f497d22bee2cacb7b1194f77011"></div>
 <title>Oauth</title>
