--- a/list.html
+++ b/list.html
@@ -16,7 +16,7 @@
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
   <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Games</a>
   <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button">Report an issue</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+  <a href="testingrounds.html" class="w3-bar-item w3-button">Testing Grounds</a>
 </div>
 </head>
 <body>
