--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+  a {
+    text-shadow:4px 4px 3px #444
+  }
+<s/tyle>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <title>Games</title>
 <div class="w3-bar w3-black">
