--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
   a {
     text-shadow:4px 4px 3px #444
   }
-<s/tyle>
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+</style>
 <title>Games</title>
 <div class="w3-bar w3-black">
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
