--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -3,8 +3,9 @@
 <head>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
-  a {
+  body {
     text-shadow:4px 4px 3px #444
+    class="w3-button w3-white w3-border w3-border-red w3-round-large"
   }
 </style>
 <title>Games</title>
