--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
   a {
-    text-shadow:4px 4px 3px #444
+    text-shadow:4px 4px 3px #444;
+    background-color: lightgreen;
   }
 </style>
 <title>Games</title>
