--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -6,6 +6,10 @@
   a {
     text-shadow:4px 4px 3px #444;
     background-color: lightgreen;
+    padding-top: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
   }
 </style>
 <title>Games</title>
