--- a/list.html
+++ b/list.html
@@ -12,7 +12,7 @@
 <title>Oauth</title>
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<div class="w3-bar w3-black w3-animate-bottom">
+<div class="w3-bar w3-black w3-animate-bottom w3-animate-opacity">
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
   <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
   <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Report an issue</a>
