--- a/list.html
+++ b/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<--Google Analitics-->
+<!--Google Analitics-->
   <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -12,11 +12,11 @@
 
 <title>Oauth</title>
 
-<--CSS-->
+<!--CSS-->
 <link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-<--nav bar-->
+<!--nav bar-->
 <div class="w3-bar w3-black w3-animate-left" class="w3-animate-opacity">
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
   <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
