--- a/list.html
+++ b/list.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script type="text/javascript">
+    var vglnk = {key: '4860377ffdc833281d423d385e3bd3df'};
+    (function(d, t) {
+        var s = d.createElement(t);
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = '//cdn.viglink.com/api/vglnk.js';
+        var r = d.getElementsByTagName(t)[0];
+            r.parentNode.insertBefore(s, r);
+    }(document, 'script'));
+</script>
 <!--Google Analitics-->
   <script>
   window.dataLayer = window.dataLayer || [];
