--- a/list.html
+++ b/list.html
@@ -27,6 +27,17 @@
 <body>
      <h1 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Least Common Games</h1>
      <h2 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Click on the Games button at the top.</h2>
-  <script src="//ap.lijit.com/www/delivery/fpi.js?z=986828&width=300&height=250"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
+     crossorigin="anonymous"></script>
+<!-- home ad -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4952712508836803"
+     data-ad-slot="4353317635"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
