--- a/list.html
+++ b/list.html
@@ -27,13 +27,13 @@
 <body>
      <h1 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Least Common Games</h1>
      <h2 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Click on the Games button at the top.</h2>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
      crossorigin="anonymous"></script>
-<!-- home ad -->
+<!-- Home Ads -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-4952712508836803"
-     data-ad-slot="4353317635"
+     data-ad-slot="3536744198"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
 <script>
