--- a/list.html
+++ b/list.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4952712508836803"
-     crossorigin="anonymous"></script>
-  
 <!--Google Analitics-->
   <script>
   window.dataLayer = window.dataLayer || [];
@@ -28,17 +25,8 @@
 </div>
 </head>
 <body>
-     <h1 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Least Common Games</h1>
-     <h2 class="w3-text-black" style="text-shadow:4px 4px 3px #444">Click on the Games button at the top.</h2>
-<!-- Home Ads -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-4952712508836803"
-     data-ad-slot="3536744198"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+     <h1>Welcome to Least Common Games!</h1>
+     <h2>There lots of games to explore!</h2>
+     <h2>Head over to Games to dive in to loads of fun!</h2>
 </body>
 </html>
