--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -1,8 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--CSS-->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body {
+  background-image: linear-gradient(to bottom right, red, yellow);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+</style> 
+  
 <title>Games</title>
+  
 <div class="w3-bar w3-black">
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
   <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Games</a>
