--- a/list.html
+++ b/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e95f91ddcd1d4091b1b89ba44360cc39"}'></script><!-- End Cloudflare Web Analytics -->
 <!--Google Analitics-->
   <script>
   window.dataLayer = window.dataLayer || [];
