--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e95f91ddcd1d4091b1b89ba44360cc39"}'></script><!-- End Cloudflare Web Analytics -->
 <!--CSS-->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <style>
