--- a/gfiles/flash/index.html
+++ b/gfiles/flash/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Oauth</title>
+		<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e95f91ddcd1d4091b1b89ba44360cc39"}'></script><!-- End Cloudflare Web Analytics -->
+		<title>Flash Game</title>
 		<style>
 			body {
 				overflow: hidden;
