--- a/gfiles/flash/index.html
+++ b/gfiles/flash/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e95f91ddcd1d4091b1b89ba44360cc39"}'></script><!-- End Cloudflare Web Analytics -->
 		<title>Flash Game</title>
+		<link rel="icon" type="image/x-icon" href="./files/download.png">
 		<style>
 			body {
 				overflow: hidden;
