--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -22,6 +22,7 @@ body {
 </head>
 <body>
 <h2>HTML5 Games</h2>
+<ul class="w3-ul">
 <a href="https://www.dropbox.com/s/c7joijx4quwx7sm/slither.io.html?dl=1">slither.io</a>
 <a href="./gfiles/html5/2048/" class="w3-button w3-white w3-border w3-border-red w3-round-large">2048</a>
 <a href="./gfiles/html5/asteroids/" class="w3-button w3-white w3-border w3-border-red w3-round-large">Asteroids</a>
@@ -41,7 +42,6 @@ body {
 <a href="./gfiles/html5/hextris/" class="w3-button w3-white w3-border w3-border-red w3-round-large">Hextris</a>
 <a href="./gfiles/html5/konnekt/" class="w3-button w3-white w3-border w3-border-red w3-round-large">Konnekt</a>
 <a href="./gfiles/html5/krunker/" class="w3-button w3-white w3-border w3-border-red w3-round-large">Krunker</a>
-<a href="./gfiles/html5/linuxvm/" class="w3-button w3-white w3-border w3-border-red w3-round-large">Linuxvm</a>
 <a href="./gfiles/html5/minecraft/" class="w3-button w3-white w3-border w3-border-red w3-round-large">Minecraft</a>
 <a href="./gfiles/html5/pushback/" class="w3-button w3-white w3-border w3-border-red w3-round-large">Pushback</a>
 <a href="./gfiles/html5/racer/" class="w3-button w3-white w3-border w3-border-red w3-round-large">Racer</a>
@@ -72,8 +72,6 @@ body {
 <a href="./gfiles/flash/?swf=3dtanks.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">3dtanks</a>
 <a href="./gfiles/flash/?swf=abobosbigadventure.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Abobosbigadventure</a>
 <a href="./gfiles/flash/?swf=achievementunlocked.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Achievementunlocked</a>
-<a href="./gfiles/flash/?swf=achievementunlocked2.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Achievementunlocked2</a>
-<a href="./gfiles/flash/?swf=achievementunlocked3.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Achievementunlocked3</a>
 <a href="./gfiles/flash/?swf=actionturnip.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Actionturnip</a>
 <a href="./gfiles/flash/?swf=adaran.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Adaran</a>
 <a href="./gfiles/flash/?swf=adrenaline.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Adrenaline</a>
@@ -89,9 +87,6 @@ body {
 <a href="./gfiles/flash/?swf=bloonsplayerpack4.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Bloonsplayerpack4</a>
 <a href="./gfiles/flash/?swf=bloonsplayerpack5.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Bloonsplayerpack5</a>
 <a href="./gfiles/flash/?swf=bloonstd1.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Bloonstd1</a>
-<a href="./gfiles/flash/?swf=bloonstd3.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Bloonstd3</a>
-<a href="./gfiles/flash/?swf=bloonstd4.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Bloonstd4</a>
-<a href="./gfiles/flash/?swf=bloonstd5.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Bloonstd5</a>
 <a href="./gfiles/flash/?swf=bobtherobber.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Bobtherobber</a>
 <a href="./gfiles/flash/?swf=boombot2.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Boombot2</a>
 <a href="./gfiles/flash/?swf=boxhead2play.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Boxhead2play</a>
@@ -267,5 +262,6 @@ body {
 <a href="./gfiles/flash/?swf=yearofthesnake.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Yearofthesnake</a>
 <a href="./gfiles/flash/?swf=yuriusshouseofspooks.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Yuriusshouseofspooks</a>
 <a href="./gfiles/flash/?swf=zombiealienparasites.swf" class="w3-button w3-white w3-border w3-border-red w3-round-large">Zombiealienparasites</a>
+</ul>
 </body>
 </html>
