--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -21,6 +21,7 @@ body {
 	padding: 10px;
 	width: 420px;
 	height: 600px;
+	border-radius: 25px;
 }
 
 #glist {
@@ -30,6 +31,7 @@ body {
 	height: 520px;
 	padding: 0;
 	text-align: center;
+	border-radius: 25px;
 }
 
 #gsearchbar {
@@ -40,11 +42,13 @@ body {
 	padding: 12px;
 	margin-bottom: 10px;
 	transition: 0.2s ease;
+	border-radius: 25px;
 }
 
 #gsearchbar:focus {
 	background-color: #eee;
 	box-shadow: inset 0 0 5px 1px rgba(0, 0, 0, 0.4);
+	border-radius: 25px;
 }
 
 #glist h2 {
@@ -74,6 +78,7 @@ body {
 #glist a:hover {
 	background-color: #eeeeee;
 	text-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+	border-radius: 25px;
 }
 </style> 
   
