--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -73,6 +73,7 @@ body {
 	background-color: #f6f6f6;
 	padding: 12px;
 	transition: 0.2s ease;
+	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
 }
 
 #glist a:hover {
