--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -85,7 +85,7 @@ body {
   
 <title>Games</title>
   
-<div class="w3-bar w3-black">
+<div class="w3-bar w3-black w3-center w3-animate-left">
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
   <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Games</a>
   <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button">Report an issue</a>
