--- a/list.html
+++ b/list.html
@@ -28,7 +28,8 @@
 </head>
 <body>
      <h1>Welcome to Least Common Games!</h1>
-     <h2>There lots of games to explore!</h2>
+     <h2>There are many games to explore!</h2>
      <h2>Head over to Games to dive in to loads of fun!</h2>
+     
 </body>
 </html>
