--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-D8TLVN659Z');
   </script>
 
-<title>Lexia</title>
+<title>Least Common Games</title>
 
 <!--CSS-->
 <link rel="stylesheet" href="./css/style.css">
