--- a/list.html
+++ b/list.html
@@ -29,7 +29,8 @@
 <body>
      <h1>Welcome to Least Common Games!</h1>
      <h2>There are many games to explore!</h2>
-     <h2>Head over to Games to dive in to loads of games!</h2>
+     <h2>Head over to games to play games. Obviously.</h2>
+    
      
 </body>
 </html>
