--- a/list.html
+++ b/list.html
@@ -28,7 +28,7 @@
 </head>
 <body>
      <h1>Welcome to Least Common Games!</h1>
-     <h2>There are many games to explore!</h2>
+     <h2>There are many games to play! Except Fortnite. NO FORTNITE!!!</h2>
      <h2>Head over to games to play games. Obviously.</h2>
     
      
