--- a/list.html
+++ b/list.html
@@ -28,7 +28,7 @@
 </head>
 <body>
      <h1>Welcome to Least Common Games!</h1>
-     <h2>There are many games to play! Merry Christmas!</h2>
+     <h2>There are many games to play! Make sure to try the " Riddle School Series "</h2>
      <h2>Head over to games to play games. Obviously.</h2>
     
      
