--- a/list.html
+++ b/list.html
@@ -27,8 +27,9 @@
 </div>
 </head>
 <body>
+     <h2>Daily game "Riddle School Series"</h2>
      <h1>Welcome to Least Common Games!</h1>
-     <h2>There are many games to play! Make sure to try the " Riddle School Series "</h2>
+     <h2>There are many games to play!</h2>
      <h2>Head over to games to play games. Obviously.</h2>
     
      
