--- a/list.html
+++ b/list.html
@@ -13,7 +13,7 @@
   gtag('config', 'G-D8TLVN659Z');
   </script>
 
-<title>Least Common Games</title>
+<title>LC Games</title>
 
 <!--CSS-->
 <link rel="stylesheet" href="./css/style.css">
@@ -28,7 +28,7 @@
 </head>
 <body>
      <h2>Daily game: "Riddle School Series"</h2>
-     <h1>Welcome to Least Common Games!</h1>
+     <h1>Welcome to LC Games!</h1>
      <h2>There are many games to play!</h2>
      <h2>Head over to games to play games. Obviously.</h2>
     
