--- a/list.html
+++ b/list.html
@@ -28,8 +28,8 @@
 </head>
 <body>
      <h2>Welcome to LC Games!</h2>
-     <h1>Daily game: "Riddle School Series"</h1>
-     <h2>There are many games to play!</h2>
+     <h1>There are many games to enjoy!</h1>
+     <h2>Daily game: "Riddle School Series"</h2>
      <h2>Head over to games to play games, Obviously.</h2>
     
      
