--- a/list.html
+++ b/list.html
@@ -27,7 +27,7 @@
 </div>
 </head>
 <body>
-     <h2>Welcome to LC Games!</h2>
+     <h2>Welcome to <img src=<img src=https://images.cooltext.com/5570627.png></h2>
      <h1>There are many games to enjoy!</h1>
      <h2>Daily game: "Riddle School Series"</h2>
      <h2>Head over to games to play games, Obviously.</h2>
