--- a/list.html
+++ b/list.html
@@ -27,7 +27,7 @@
 </div>
 </head>
 <body>
-     <h2>Welcome to <img src=<img src=http://zeus.cooltext.com/images/77f/77f7b9dcf01310609ed79847dd38613b5db5b4c6.png></h2>
+     <h2>Welcome to <img src="./files/cooltext400062235659349.png"></h2>
      <h1>There are many games to enjoy!</h1>
      <h2>Daily game: "Riddle School Series"</h2>
      <h2>Head over to games to play games, Obviously.</h2>
