--- a/gfiles/html5/templerun.html
+++ b/gfiles/html5/templerun.html
@@ -1,1 +1,2 @@
-<iframe src="https://games.engineering.com/temple-run-2/index.html"></iframe>
+<iframe src="https://games.engineering.com/temple-run-2/index.html" allowfullscreen="true"></iframe>
+<button onclick="requestFullscreen()">Full screan</button>
