--- a/gfiles/html5/templerun.html
+++ b/gfiles/html5/templerun.html
@@ -1,1 +1,1 @@
-<iframe src="https://games.engineering.com/temple-run-2/index.html" allowfullscreen></iframe>
+<iframe src="https://games.engineering.com/temple-run-2/index.html" height="500px" width="600px"></iframe>
