--- a/list.html
+++ b/list.html
@@ -29,7 +29,7 @@
 <body>
      <h2>Welcome to <img src="./files/cooltext400062235659349.png"></h2>
      <h1>There are many games to enjoy!</h1>
-     <h2>Daily game: "Riddle School Series"</h2>
+     <h2>Daily game: "Joe Mama"</h2>
      <h2>Head over to games to play games, Obviously.</h2>
     
      
