--- a/list.html
+++ b/list.html
@@ -24,7 +24,7 @@
 </head>
 <body>
      <h2>Welcome to <img src="./files/cooltext400062235659349.png"></h2>
-     <h1>There are many games to enjoy!</h1>
+     <h1>Today is December, 14 2021</h1>
      <h2>Game of the day: "mariocombat"</h2>
      
     
