--- a/list.html
+++ b/list.html
@@ -10,6 +10,7 @@
      crossorigin="anonymous"></script>
 
 <title>LC Games</title>
+<link rel="icon" type="image/x-icon" href="/file/cooltext400063508076468.png">
 
 <!--CSS-->
 <link rel="stylesheet" href="./css/style.css">
