--- a/list.html
+++ b/list.html
@@ -10,7 +10,7 @@
      crossorigin="anonymous"></script>
 
 <title>LC Games</title>
-<link rel="icon" href="./files/cooltext400063508076468.png">
+<link rel="icon" href="./files/favicon.png">
 
 <!--CSS-->
 <link rel="stylesheet" href="./css/style.css">
