--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -2,15 +2,11 @@
 <html>
 <head>
 <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e95f91ddcd1d4091b1b89ba44360cc39"}'></script><!-- End Cloudflare Web Analytics -->
+	
 <!--CSS-->
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="./css/style.css">
 <style>
-body {
-  background-image: linear-gradient(to bottom right, red, yellow);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
 .container {
 	padding: 20px;
 }
@@ -83,8 +79,9 @@ body {
 }
 </style> 
   
-<title>Games</title>
-  
+<title>LC Games</title>
+	
+<!--nav bar-->
 <div class="w3-bar w3-black w3-center w3-animate-left">
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
   <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Games</a>
