--- a/gfiles/index.html
+++ b/gfiles/index.html
@@ -83,9 +83,10 @@
 	
 <!--nav bar-->
 <div class="w3-bar w3-black w3-center w3-animate-left">
-  <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button">Home</a>
-  <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button">Games</a>
-  <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button">Report an issue</a>
+  <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
+  <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
+  <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Report an issue</a>
+  <a href="./news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
 </div>
 </head>
 <body>
