--- a/list.html
+++ b/list.html
@@ -21,6 +21,7 @@
   <a href="https://lexia.vercel.app/list.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Home</a>
   <a href="https://lexia.vercel.app/gfiles" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Games</a>
   <a href="https://github.com/Herobrine5261/games2/issues" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">Report an issue</a>
+  <a href="./news.html" class="w3-bar-item w3-button" style="text-shadow:4px 4px 3px #444">News</a>
 </div>
 </head>
 <body>
