--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <h1>Currently the LC Team is working on new games to add for you guys. They will be added in the next few weeks. The current games we are working on are the Henry
+  <h1>LC NEWS:Currently the LC Team is working on new games to add for you guys. They will be added in the next few weeks. The current games we are working on are the Henry
   Stickmin games.</h1>
 
 </body>
