--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
 
   <h1>LC NEWS</h1>
   <h2>Currently the LC Team is working on new games to add for you guys. They will be added in the next few weeks. The current games we are working on are the Henry
-  Stickmin Games, and Super Mario 64 rom. Also the website is updated daily so don't worry. Also, STOP ASKING FOR GAMES I CANT ADD!!!
+  Stickmin Games, and Super Mario 64 rom, and a few secret presents! Also the website is updated daily so don't worry. Also, STOP ASKING FOR GAMES WE CAN'T ADD!
   </h2>
 
 </body>
