--- a/services/index.html
+++ b/services/index.html
@@ -7,7 +7,12 @@
 </head>
 <body>
 
-
+  <h1>Services</h1>
+  <h2>Website Services</h2>
+  <li>
+    <ui>We host your website, and you code.<ui>
+    <ui>100% FREE<ui>
+  </li>
 
 </body>
 </html>
