--- a/services/index.html
+++ b/services/index.html
@@ -10,8 +10,8 @@
   <h1>Services</h1>
   <h2>Website Services</h2>
   <li>
-    <ui>We host your website, and you code.<ui>
-    <ui>100% FREE<ui>
+    <ui>We host your website, and you code.</ui>
+    <ui>100% FREE</ui>
   </li>
 
 </body>
