--- a/services/index.html
+++ b/services/index.html
@@ -9,10 +9,10 @@
 
   <h1>Services</h1>
   <h2>Website Services</h2>
-  <li>
-    <ui>We host your website, and you code.</ui>
-    <ui>100% FREE</ui>
-  </li>
+<ul class="w3-ul">
+  <li>We host you code.</li>
+  <li>100% Free</li>
+</ul>
 
 </body>
 </html>
