--- a/services/index.html
+++ b/services/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <h1>Services</h1>
+  <h1>Services (Beta)</h1>
   <h2>Website Services</h2>
 <ul class="w3-ul">
   <li>We host you code.</li>
