--- a/list.html
+++ b/list.html
@@ -28,7 +28,7 @@
 <body>
      <h2>Welcome to <img src="./files/cooltext400062235659349.png"></h2>
      <h1>Today is December, 15 2021</h1>
-     <h2>Game of the day: "Ultimateflashsonic"</h2>
+     <h2>Game of the day: "Cookie Clicker"</h2>
      
     
      <p>This website is under the <a href="https://github.com/Herobrine5261/games2/blob/main/LICENSE">Apache-2.0 License</a>.</p>
